<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notification_header"
        android:icon="@drawable/notification_icon"
        android:textSize="20px"
        >

        <SwitchPreference
            app:key="notification"
            app:title="@string/notification_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:dependency="notification"
            app:key="not_sound"
            app:summaryOff="@string/notification_on"
            app:summaryOn="@string/notification_off"
            app:title="@string/notification_sound"

            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>



</PreferenceScreen>