<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".detail.DetailFragment"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <ImageView
            android:id="@+id/imageDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/cityImg" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:padding="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fullCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borders_layout"
                android:backgroundTint="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/cityName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorText2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/countryName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText2"
                    android:textStyle="bold" />
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/fullCity"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="50dp"
                app:cardBackgroundColor="@color/colorBk1"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:baselineAligned="false">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3">

                        <TextView
                            android:id="@+id/txtRate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:textSize="16sp"
                            android:layout_toEndOf="@+id/iconRate"
                            android:textColor="#000000" />

                        <ImageView
                            android:id="@+id/iconRate"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/star"
                            android:contentDescription="@string/contentDes" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:layout_below="@+id/iconRate"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">
                        <TextView
                            android:id="@+id/txtHotel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:textSize="16sp"
                            android:layout_toEndOf="@+id/iconHotel"
                            android:text="@string/total_hotel"
                            android:textColor="#000000" />
                        <ImageView
                            android:id="@+id/iconHotel"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/hotel_icon"
                            android:contentDescription="@string/contentDesHotel" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotels"
                            android:layout_below="@+id/iconHotel"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3">
                        <TextView
                            android:id="@+id/txtRest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:textSize="16sp"
                            android:layout_toEndOf="@+id/iconRest"
                            android:text="@string/total_restaurant"
                            android:textColor="#000000" />
                        <ImageView
                            android:id="@+id/iconRest"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/restaurant_icon"
                            android:contentDescription="@string/contentDesRest" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/restaurants"
                            android:layout_below="@+id/iconRest"/>
                    </RelativeLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_description"
                android:textColor="@color/colorText1"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txtBtnMap"
                android:src="@drawable/map_icon" />

            <TextView
                android:id="@+id/cityDescrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="#8D000000"
                android:textSize="20sp" />



        </LinearLayout>


    </LinearLayout>
</LinearLayout>
